# Ocarina

./: CMakeLists.txt  README.md  STM32F042C6Tx_FLASH.ld
Firmware/: STM32F042x6.cmake
Hardware/: 1_Main.SchDoc  2_IsoCAN.SchDoc  Ocarina.PcbDoc  Ocarina.PrjPcb
Hardware/Libraries/: ADM3054BRWZ.PcbLib  ADM3054BRWZ.SchLib  Button_4x3x2.PcbLib  EAGLE-ISOLATED_CONVERTER-rev16e.PCBLIB  EAGLE-ISOLATED_CONVERTER-rev16e.SCHLIB  MiniUSB.PcbLib  WE_FISM_177920511.SchLib
Inc/: stm32f0xx_hal_conf.h
Src/: main.c  usbd_cdc_if.c  usbd_desc.c
Src/ocarina/: ocarina.c  ocarina.h  protocol.c  protocol.h
docs/: PROTOCOL.md
tools/: ocarina.py
